Update build conventions and documentation for new features