@@ -22,7 +22,7 @@ public class S41_VersionConverter {
 
         System.out.printf("S41_VersionConverter  |  %d PDF(s)%n", inputs.size());
 
-        Path input = inputs.get(0);
+        Path input = inputs.getFirst();
         String stem = SampleBase.stem(input);
 
         try (PdfDocument doc = PdfDocument.open(input)) {
